# efano

./: CMakeLists.txt  README.md  conanfile.py  cor.yml
results/: bloom.csv  bloom_1m.csv  bloom_1m_pivot.csv  efano.plt  efano_1m.csv  efano_1m_actual.csv  efano_1m_expected.csv
src/: CMakeLists.txt
src/efano/: bit_packed.cpp  bit_packed.hpp  bloom.cpp  bloom.hpp  bloom.test.cpp  efano.cpp  efano.hpp  efano.test.cpp  elias_fano_filter.hpp  elias_fano_filter.test.cpp  filter.test.hpp
src/efano/import/: bit_ops.hpp  int_types.hpp  slice.hpp
test_package/: CMakeLists.txt  conanfile.py
test_package/src/: example.cpp
